kubernetes/deployment-backend-stream.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend-stream
spec:
  replicas: 1
  selector:
    matchLabels:
      application: backend-stream
  template:
    metadata:
      labels:
        application: backend-stream
    spec:
      containers:
      - name: backend-stream
        image: itetechmadacr.azurecr.io/mbsaback:0.1
        ports:
        - containerPort: 80
