kubernetes/deployment-twitter-poller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-twitter-poller
spec:
  replicas: 1
  selector:
    matchLabels:
      application: twitter-poller
  template:
    metadata:
      labels:
        application: twitter-poller
    spec:
      containers:
      - name: twitter-poller
        image: itetechmadacr.azurecr.io/mbsapoller:0.1
