kubernetes/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    application: frontend
spec:
  selector:
    application: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
